--- a/package.json
+++ b/package.json
@@ -1,22 +1,39 @@
 {
-	"name": "Hemlock",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
-		"react": "16.0.0-alpha.6",
-		"react-native": "0.44.2"
-	},
-	"devDependencies": {
-		"babel-jest": "20.0.3",
-		"babel-preset-react-native": "1.9.2",
-		"jest": "20.0.4",
-		"react-test-renderer": "16.0.0-alpha.6"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "Hemlock",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "blueimp-md5": "^2.7.0",
+    "crypto-js": "^3.1.9-1",
+    "events": "^1.1.1",
+    "firebase": "^3.9.0",
+    "js-md5": "^0.4.2",
+    "kinvey": "^1.7.0",
+    "kinvey-html5-sdk": "^3.5.0",
+    "react": "16.0.0-alpha.6",
+    "react-addons-pure-render-mixin": "^15.5.0",
+    "react-native": "0.44.0",
+    "react-native-router-flux": "^3.38.0",
+    "react-redux": "^5.0.4",
+    "react-static-container": "^1.0.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "uid": "0.0.2",
+    "url": "^0.11.0"
+  },
+  "devDependencies": {
+    "babel-jest": "20.0.1",
+    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-preset-react-native": "1.9.2",
+    "eslint-config-rallycoding": "^3.2.0",
+    "jest": "20.0.1",
+    "react-test-renderer": "16.0.0-alpha.6"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
